--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!--Аббасова-->
     <header>
         <div class="logo">
           <img src="images/logo.png" alt="Логотип">
@@ -39,7 +38,6 @@
         </ul>
     </aside>
 
-    <!--Тихоненко-->
     <article>
         <h3>Популярные книги</h3>
         <div class="book-list">
@@ -70,7 +68,7 @@
         <div class="footer-content">
             <p>Email: <a href="mailto:info@knizhny-magazin.ru">info@knizhny-magazin.ru</a></p>
             <p>Телефон: <a href="tel:+71234567890">+7 (123) 456-78-90</a></p>
-            <p>2025 Книжный магазин. Все права защищены.</p>
+            <p>&copy; 2025 Книжный магазин. Все права защищены.</p>
         </div>
     </footer>
 </body>
