--- a/dz2/index.html
+++ b/dz2/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/logo.png" type="image/icon">
     <title>Summit Outfitters</title>
 </head>
 <body>
     <header>
-        <div class="head">
+        <div class="top-navigation">
             <div class="logo-title">
                 <img src="images/logo.png" alt="logo">
                 <h1>Summit Outfitters</h1>
@@ -82,7 +83,6 @@
         </form>
     </div>
     
-    
 
     <footer>
         <div class="footer-content">
@@ -94,7 +94,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <p class="copyright">Copyright © 2025 All rights reserved - Summit Outfitters</p>
+            <p class="copyright">Copyright &copy; 2025 All rights reserved - Summit Outfitters</p>
         </div>
     </footer>
 </form>
