--- a/dz2/table.html
+++ b/dz2/table.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/sylestable.css">
+    <link rel="icon" href="images/logo.png" type="image/icon">
     <title>Summit Outfitters</title>
     <title>Document</title>
 </head>
@@ -73,7 +74,7 @@
                 <td></td>
             </tr>
             
-            <!-- Строка 7: ВСЕ ячейки объединены по вертикали -->
+
             <tr>
                 <td class="merged-v" rowspan="2"></td>
                 <td class="merged-v" rowspan="2"></td>
@@ -82,7 +83,6 @@
                 <td class="merged-v" rowspan="2"></td>
             </tr>
             
-            <!-- Строка 8: пустая (все ячейки уже объединены в строке 7) -->
             <tr></tr>
         </table>
     </div>
