--- a/dz2/index.html
+++ b/dz2/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/logo.png" type="image/icon">
+    <link rel="icon" href="https://github.com/Eletmean/webfefu/blob/master/dz2/images/logo.png" type="image/favicon">
     <title>Summit Outfitters</title>
 </head>
 <body>
@@ -53,7 +54,7 @@
             </ul>
         </aside>
     
-        <form action="#" method="POST">
+        <form action="#">
             <div class="form-row">
                 <div class="form-group">
                     <label for="username"></label>
