--- a/dz2/table.html
+++ b/dz2/table.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <div class="head">
+        <div class="top-navigation">
             <div class="logo-title">
                 <img src="images/logo.png" alt="logo">
                 <h1>Summit Outfitters</h1>
