--- a/dz2/index.html
+++ b/dz2/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="images/logo.png" type="image/icon">
-    <link rel="icon" href="https://github.com/Eletmean/webfefu/blob/master/dz2/images/logo.png" type="image/favicon">
+    <link rel="icon" href="https://github.com/Eletmean/webfefu/blob/master/dz2/images/logo.png" type="image/x-icon">
     <title>Summit Outfitters</title>
 </head>
 <body>
