--- a/dz2/table.html
+++ b/dz2/table.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/sylestable.css">
-    <link rel="icon" href="images/logo.png" type="image/icon">
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
     <title>Summit Outfitters</title>
     <title>Document</title>
 </head>
